--- a/pages/binding/binding.wxml
+++ b/pages/binding/binding.wxml
@@ -1,4 +1,27 @@
 <!--pages/binding/binding.wxml-->
-<text>pages/binding/binding.wxml</text>
-<input type="text" placeholder="学号" auto-focus />
-<button type="default" size="defaultSize" bindtap="submit" hover-class="defaultTap">Button</button>
+<form>
+<view class="cu-form-group margin-top">
+    <view class="title must-star">学校</view>
+    <input type="text" class="radius" bindinput="input('college')" placeholder="学校" disabled="{{loading}}" auto-focus />
+  </view>
+  <view class="cu-form-group">
+    <view class="title must-star">学号</view>
+    <input type="text" class="radius" bindinput="input('studentID')" placeholder="学号" disabled="{{loading}}" />
+  </view>
+  <view class="cu-form-group">
+    <view class="title must-star">姓名</view>
+    <input type="text" class="radius" bindinput="input('realName')" placeholder="姓名" disabled="{{loading}}" />
+  </view>
+  <view class="cu-form-group">
+    <view class="title">昵称</view>
+    <input type="text" class="radius" bindinput="input('nickName')" placeholder="昵称" disabled="{{loading}}" />
+  </view>
+</form>
+<view class='flex-sub text-center'>
+  <view class='text-sm padding'>
+    <text class="text-gray">带有</text><text class="must-star"></text><text class="text-gray">的为必填项</text>
+  </view>
+</view>
+<view class="padding flex flex-direction">
+  <button class="cu-btn bg-grey lg" bindtap="submit" loading="{{loading}}" disabled="{{loading}}" >绑定</button>
+</view>
