--- a/pages/course/course.wxml
+++ b/pages/course/course.wxml
@@ -1,7 +1,31 @@
 <!--pages/course/course.wxml-->
 <view class="section">
-  <view class="section_tittle">今日课程</view>
   <view class="flex-wrp" style="height:300px;flex-direction:column;">
-  <view></view>
+    <view class="cu-bar bg-white solid-bottom">
+      <view class='action'>
+        <text class='icon-titles text-orange '></text> 第1周
+      </view>
+    </view>
+    <scroll-view scroll-x class="bg-white nav" scroll-with-animation scroll-left="{{scrollLeft}}">
+      <view class="cu-item {{index==TabCur?'text-blue cur':''}}" wx:for="{{7}}" wx:key bindtap='tabSelect' data-id="{{index}}">
+        星期{{index+1}}
+      </view>
+    </scroll-view>
+    <view hidden='{{TabCur != 0}}'>
+      <view class="cu-card article">
+        <view wx:for="{{5}}" wx:key class="cu-item shadow">
+          <view class="title"> 课程名称 </view>
+          <view class='content'>
+            <view class="desc">
+              <view class='text-gray'> 教师：任课教师 </view>
+            </view>
+            <view class='content'>
+              <view class='cu-tag bg-red light round'> 第7~9小节 </view>
+              <view class='cu-tag bg-green light round'> III-108 </view>
+            </view>
+          </view>
+        </view>
+      </view>
+    </view>
   </view>
 </view>
