--- a/pages/info/info.wxml
+++ b/pages/info/info.wxml
@@ -1,2 +1,107 @@
 <!--pages/info/info.wxml-->
-<text>pages/info/info.wxml</text>
+<view class="content margin-top">
+  <view class="userinfo">
+    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
+    <block wx:else>
+      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+    </block>
+  </view>
+</view>
+
+<view class="cu-list menu sm-border card-menu margin-top margin-bottom">
+  <view class="cu-item">
+    <view class='content'>
+      <text class='icon-profilefill text-orange'></text>
+      <text class='text-black text-bold'>个人信息</text>
+    </view>
+    <view class='action'>
+      <button class='cu-btn bg-green shadow' bindtap="showModal" data-target="menuModal"> 修改</button>
+    </view>
+  </view>
+  <view class="cu-modal {{modalName=='menuModal'?'show':''}}" bindtap='hideModal'>
+    <view class="cu-dialog" catchtap>
+      <view class="cu-form-group">
+        <view class='title'>昵称：</view>
+        <input placeholder="{{personInfo.nickName}}" class='radius' name='input' bindinput='nickNameInput'></input>
+      </view>
+      <view class="cu-form-group">
+        <view class='title'>电话：</view>
+        <input placeholder="{{personInfo.phone}}" class='radius' name='input' bindinput='phoneInput'></input>
+      </view>
+      <view class="cu-form-group">
+        <view class='title'>邮箱：</view>
+        <input placeholder="{{personInfo.email}}" class='radius' name='input' bindinput='emailInput'></input>
+      </view>
+      <view class="cu-item justify-around">
+        <view class='action padding'>
+          <button class='cu-btn bg-green shadow' bindtap="submit" data-target="menuModal"> 完成</button>
+        </view>
+      </view>
+    </view>
+  </view>
+
+  <view class="cu-item">
+    <view class='content'>
+      <text class='tittle margin-left'> 学号/教工号：</text>
+      <text class='text-grey'> {{personInfo.personID}}</text>
+    </view>
+  </view>
+  <view class="cu-item">
+    <view class='content'>
+      <text class='tittle margin-left'> 学校：</text>
+      <text class='text-grey'> {{personInfo.college}}</text>
+    </view>
+  </view>
+  <view class="cu-item">
+    <view class='content'>
+      <text class='tittle margin-left'> 姓名：</text>
+      <text class='text-grey'> {{personInfo.realName}}</text>
+    </view>
+  </view>
+  <view class="cu-item">
+    <view class='content'>
+      <text class='tittle margin-left'> 性别：</text>
+      <text class='text-grey'> {{personInfo.gender}}</text>
+    </view>
+  </view>
+  <view class="cu-item">
+    <view class='content'>
+      <text class='tittle margin-left'> 年级：</text>
+      <text class='text-grey'> {{personInfo.grade}}</text>
+    </view>
+  </view>
+  <view class="cu-item">
+    <view class='content'>
+      <text class='tittle margin-left'> 学院：</text>
+      <text class='text-grey'> {{personInfo.academy}}</text>
+    </view>
+  </view>
+  <view class="cu-item">
+    <view class='content'>
+      <text class='tittle margin-left'> 专业：</text>
+      <text class='text-grey'> {{personInfo.major}}</text>
+    </view>
+  </view>
+  <view class="cu-item">
+    <view class='content'>
+      <text class='tittle margin-left'> 昵称：</text>
+      <text class='text-grey'> {{personInfo.nickName}}</text>
+    </view>
+  </view>
+  <view class="cu-item">
+    <view class='content'>
+      <text class='tittle margin-left'> 电话：</text>
+      <text class='text-grey'> {{personInfo.phone}}</text>
+    </view>
+  </view>
+  <view class="cu-item">
+    <view class='content'>
+      <text class='tittle margin-left'> 邮箱：</text>
+      <text class='text-grey'> {{personInfo.email}}</text>
+    </view>
+  </view>
+</view>
+<view class="padding flex flex-direction margin-bottom">
+  <button class='cu-btn bg-red margin-tb-sm lg'>解除绑定</button>
+</view>
