--- a/pages/course/course.wxss
+++ b/pages/course/course.wxss
@@ -1,6 +1,7 @@
 /* pages/course/course.wxss */
 @import "../../component/colorUI/colorui.wxss";
 @import "../../component/colorUI/app.wxss";
+@import "../../component/loader/loaders.min.wxss";
 .text-limit-short {
   max-width: 120px;
   overflow: hidden;
@@ -15,4 +16,19 @@
 }
 .text-spacing {
   letter-spacing: 4rpx;
+}
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
+.square-spin > view {
+  background-color: lightgray;
 }
