修复弹窗聚焦输入关闭&微信头像昵称获取

--- a/component/colorUI/colorui.wxss
+++ b/component/colorUI/colorui.wxss
@@ -1139,7 +1139,8 @@ button.icon.lg {
 }
 
 .cu-list.menu.sm-border>.cu-item::after {
-  width: calc(200% - 90rpx);
+  width: calc(200% - 12
+  0rpx);
   left: 30rpx;
 }
 
