--- a/pages/info/info.wxml
+++ b/pages/info/info.wxml
@@ -1,11 +1,10 @@
 <!--pages/info/info.wxml-->
 <view class="content margin-top">
   <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+    <view class="userinfo-avatar">
+      <open-data  type="userAvatarUrl"></open-data>
+    </view>
+      <open-data type="userNickName" class="userinfo-nickname"></open-data>
   </view>
 </view>
 
@@ -20,17 +19,17 @@
     </view>
   </view>
   <view class="cu-modal {{modalName=='menuModal'?'show':''}}" bindtap='hideModal'>
-    <view class="cu-dialog">
+    <view class="cu-dialog" catchtap>
       <view class="cu-form-group">
-        <view class='title'>昵称：</view>
+        <view class='title padding-left'>昵称：</view>
         <input placeholder="{{personInfo.nickName}}" class='radius' name='input' bindinput='nickNameInput'></input>
       </view>
       <view class="cu-form-group">
-        <view class='title'>电话：</view>
+        <view class='title padding-left'>电话：</view>
         <input placeholder="{{personInfo.phone}}" class='radius' name='input' bindinput='phoneInput'></input>
       </view>
       <view class="cu-form-group">
-        <view class='title'>邮箱：</view>
+        <view class='title padding-left'>邮箱：</view>
         <input placeholder="{{personInfo.email}}" class='radius' name='input' bindinput='emailInput'></input>
       </view>
       <view class="cu-item justify-around">
