--- a/pages/binding/binding.wxml
+++ b/pages/binding/binding.wxml
@@ -2,19 +2,19 @@
 <form>
 <view class="cu-form-group margin-top">
     <view class="title must-star">学校</view>
-    <input type="text" class="radius" bindinput="input('college')" placeholder="学校" disabled="{{loading}}" auto-focus />
+    <input type="text" class="radius" bindinput="collegeInput" placeholder="学校" disabled="{{loading}}" auto-focus />
   </view>
   <view class="cu-form-group">
     <view class="title must-star">编号</view>
-    <input type="text" class="radius" bindinput="input('personID')" placeholder="学号/教工号" disabled="{{loading}}" />
+    <input type="text" class="radius" bindinput="personIDInput" placeholder="学号/教工号" disabled="{{loading}}" />
   </view>
   <view class="cu-form-group">
     <view class="title must-star">姓名</view>
-    <input type="text" class="radius" bindinput="input('realName')" placeholder="姓名" disabled="{{loading}}" />
+    <input type="text" class="radius" bindinput="realNameInput" placeholder="姓名" disabled="{{loading}}" />
   </view>
   <view class="cu-form-group">
     <view class="title">昵称</view>
-    <input type="text" class="radius" bindinput="input('nickName')" placeholder="昵称" disabled="{{loading}}" />
+    <input type="text" class="radius" bindinput="nickNameInput" placeholder="昵称" disabled="{{loading}}" />
   </view>
 </form>
 <view class='flex-sub text-center'>
@@ -23,5 +23,11 @@
   </view>
 </view>
 <view class="padding flex flex-direction">
-  <button class="cu-btn bg-grey lg" bindtap="submit" loading="{{loading}}" disabled="{{loading}}" >绑定</button>
+  <button wx:if="{{canIUse}}" class="cu-btn bg-grey lg" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" loading="{{loading}}" disabled="{{loading}}">用户授权 & 绑定</button>
+  <button wx:else class="cu-btn bg-grey lg" bindtap="userInfoSubmit" loading="{{loading}}" disabled="{{loading}}">用户授权 & 绑定</button>
+</view>
+<view class='flex-sub text-center'>
+  <view class='text-sm padding'>
+    <text class="text-gray">授权小程序使用您的微信头像和昵称</text>
+  </view>
 </view>
