--- a/pages/courseDetail/courseDetail.wxml
+++ b/pages/courseDetail/courseDetail.wxml
@@ -1,2 +1,22 @@
-<!--pages/course/course.wxml-->
-<text>pages/courseDetail/courseDetail.wxml</text>
+<!--pages/courseDetail/courseDetail.wxml-->
+<view class="cu-bar bg-white solid-bottom">
+    <view class='action title-style-3'>
+      <text class='text-xl text-bold'>高等数学</text>
+      <text class='text-Abc text-gray self-end margin-left-sm'>祖冲之 III-105</text>
+    </view>
+</view>
+<view class="cu-list grid col-4">
+  <view class="cu-item"  wx:for="{{iconList}}" wx:key>
+    <view class='icon-{{item.icon}} text-{{item.color}}'>
+    </view>
+    <text>{{item.name}}</text>
+  </view>
+</view>
+<view class="cu-timeline">
+  <view class="cu-time">现在</view>
+  <view class="cu-item cur icon-noticefill text-red">
+    <view class="content bg-red shadow-blur light">
+      <text>直播中...</text>
+    </view>
+  </view>
+</view>
