--- a/pages/courseDetail/courseDetail.wxml
+++ b/pages/courseDetail/courseDetail.wxml
@@ -1,8 +1,8 @@
 <!--pages/courseDetail/courseDetail.wxml-->
 <view class="cu-bar bg-white solid-bottom">
     <view class='action title-style-3'>
-      <text class='text-xl text-bold'>高等数学</text>
-      <text class='text-Abc text-gray self-end margin-left-sm'>祖冲之 III-105</text>
+      <text class='text-xl text-bold'>{{class.info.name}}</text>
+      <text class='text-Abc text-gray self-end margin-left-sm'>{{class.info.teacher}} {{class.info.location}}</text>
     </view>
 </view>
 <view class="cu-list grid col-4">
@@ -13,10 +13,28 @@
   </view>
 </view>
 <view class="cu-timeline">
-  <view class="cu-time">现在</view>
+  <view class="cu-time" wx:if="{{isLiving}}">现在</view>
   <view class="cu-item cur icon-noticefill text-red">
-    <view class="content bg-red shadow-blur light">
+    <view class="content bg-red light shadow-blur">
       <text>直播中...</text>
     </view>
   </view>
+</view>
+<view wx:for="{{videoList}}">
+  <view class="cu-timeline">
+  <view class="cu-time">{{item.date}}</view>
+  <view wx:for="{{item.courses}}" wx:for-item="course" class="cu-item">
+      <view wx:if="{{course.iswatch}}" class="content">
+       {{course.name}}
+      </view>
+      <view wx:else class="content bg-orange light">
+      {{course.name}}
+      </view>
+
+    
+    
+  </view>
+  </view>
+ 
+
 </view>
