--- a/pages/courseDetail/courseDetail.wxml
+++ b/pages/courseDetail/courseDetail.wxml
@@ -1,12 +1,12 @@
 <!--pages/courseDetail/courseDetail.wxml-->
 <view class="cu-bar bg-white solid-bottom">
-    <view class='action title-style-3'>
-      <text class='text-xl text-bold'>{{class.info.name}}</text>
-      <text class='text-Abc text-gray self-end margin-left-sm'>{{class.info.teacher}} {{class.info.location}}</text>
-    </view>
+  <view class='action title-style-3'>
+    <text class='text-xl text-bold'>{{info.name}}</text>
+    <text class='text-Abc text-gray self-end margin-left-sm'>{{info.teacher}} {{info.location}}</text>
+  </view>
 </view>
 <view class="cu-list grid col-4">
-  <view class="cu-item"  wx:for="{{iconList}}" wx:key>
+  <view class="cu-item"  wx:for="{{iconList}}" wx:key="{{item.name}}">
     <view class='icon-{{item.icon}} text-{{item.color}}'>
     </view>
     <text>{{item.name}}</text>
@@ -20,21 +20,16 @@
     </view>
   </view>
 </view>
-<view wx:for="{{videoList}}">
+<view wx:for="{{videoList}}" wx:key="{{item.date}}">
   <view class="cu-timeline">
   <view class="cu-time">{{item.date}}</view>
-  <view wx:for="{{item.courses}}" wx:for-item="course" class="cu-item">
-      <view wx:if="{{course.iswatch}}" class="content">
-       {{course.name}}
+    <view wx:for="{{item.videos}}" wx:for-item="course" wx:key="{{course.videoID}}" class="cu-item">
+      <view wx:if="{{course.isWatch}}" class="content">
+      {{course.name}}
       </view>
       <view wx:else class="content bg-orange light">
       {{course.name}}
       </view>
-
-    
-    
+    </view>
   </view>
-  </view>
- 
-
 </view>
