--- a/pages/info/info.wxss
+++ b/pages/info/info.wxss
@@ -5,7 +5,6 @@
 .userinfo {  
   position: relative;  
   width: 750rpx;  
-  height: 320rpx;  
   color: #333;  
   display: flex;  
   flex-direction: column;  
@@ -17,8 +16,7 @@
   display: block;  
   width: 160rpx;  
   height: 160rpx;  
-  margin: 20rpx;  
-  margin-top: 50rpx;  
+  margin: 50rpx 20rpx;  
   border-radius: 50%;  
   border: 2px solid #fff;  
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);  
