--- a/pages/courseDetail/courseDetail.wxml
+++ b/pages/courseDetail/courseDetail.wxml
@@ -1,8 +1,8 @@
 <!--pages/courseDetail/courseDetail.wxml-->
 <view class="cu-bar bg-white solid-bottom">
     <view class='action title-style-3'>
-      <text class='text-xl text-bold'>{{class.info.name}}</text>
-      <text class='text-Abc text-gray self-end margin-left-sm'>{{class.info.teacher}} {{class.info.location}}</text>
+      <text class='text-xl text-bold'>{{lesson.info.name}}</text>
+      <text class='text-Abc text-gray self-end margin-left-sm'>{{lesson.info.teacher}} {{lesson.info.location}}</text>
     </view>
 </view>
 <view class="cu-list grid col-4">
@@ -24,17 +24,18 @@
   <view class="cu-timeline">
   <view class="cu-time">{{item.date}}</view>
   <view wx:for="{{item.courses}}" wx:for-item="course" class="cu-item">
-      <view wx:if="{{course.iswatch}}" class="content">
+      <view wx:if="{{course.iswatch}}" class="content"  data-id="{{course.id}}" data-name="{{course.name}}" data-url="{{course.url}}" bindtap='tapCourse'>
        {{course.name}}
       </view>
-      <view wx:else class="content bg-orange light">
+      <view wx:else class="content bg-orange light"  data-id="{{course.id}}" data-name="{{course.name}}" data-url="{{course.url}}" bindtap='tapCourse'>
       {{course.name}}
       </view>
+    </view>
 
     
     
   </view>
-  </view>
+
  
 
 </view>
