--- a/pages/courseDetail/courseDetail.wxml
+++ b/pages/courseDetail/courseDetail.wxml
@@ -6,7 +6,7 @@
   </view>
 </view>
 <view class="cu-list grid col-4">
-  <view class="cu-item"  wx:for="{{iconList}}" wx:key="{{item.name}}">
+  <view class="cu-item"  wx:for="{{iconList}}" wx:key="{{item.name}}" bindtap="tapIcon" id="{{item.name}}">
     <view class='icon-{{item.icon}} text-{{item.color}}'>
     </view>
     <text>{{item.name}}</text>
