--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,7 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+@import '../../component/colorUI/colorui.wxss';
+@import '../../component/colorUI/icon.wxss';
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.card-swiper swiper-item {
+  left: 0rpx;
 }
