--- a/pages/binding/binding.wxml
+++ b/pages/binding/binding.wxml
@@ -23,8 +23,8 @@
   </view>
 </view>
 <view class="padding flex flex-direction">
-  <button wx:if="{{canIUse}}" class="cu-btn bg-grey lg" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" loading="{{loading}}" disabled="{{loading}}">用户授权 & 绑定</button>
-  <button wx:else class="cu-btn bg-grey lg" bindtap="userInfoSubmit" loading="{{loading}}" disabled="{{loading}}">用户授权 & 绑定</button>
+  <button wx:if="{{canIUse}}" class="cu-btn bg-green lg light" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" loading="{{loading}}" disabled="{{loading}}">用户授权 & 绑定</button>
+  <button wx:else class="cu-btn bg-green lg light" bindtap="userInfoSubmit" loading="{{loading}}" disabled="{{loading}}">用户授权 & 绑定</button>
 </view>
 <view class='flex-sub text-center'>
   <view class='text-sm padding'>
