--- a/pages/checkInControl/checkInControl.wxss
+++ b/pages/checkInControl/checkInControl.wxss
@@ -2,8 +2,16 @@
 @import '../../component/colorUI/colorui.wxss';
 @import '../../component/colorUI/icon.wxss';
 @import "../../component/loader/loaders.min.wxss";
+.flat-btn {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+.pad-down {
+  height: 140rpx;
+}
 .loader {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   display: flex;
