--- a/pages/resource/resource.wxml
+++ b/pages/resource/resource.wxml
@@ -6,16 +6,25 @@
   </view>
 </view>
 <view class="cu-list menu menu-avatar">
-  <view class="cu-item">
+  <view class="cu-item" wx:for="{{resourceList}}">
     <view class="cu-avatar radius lg icon-file text-blue"></view>
     <view class='content'>
-      <view class='text-grey'>函数及其特性.zip</view>
-      <view class='text-gray text-sm'>
-        <text class='icon-infofill text-red'></text>未下载</view>
+      <view class='text-grey'>{{item.name}}</view>
+      <view class='text-gray text-sm' wx:if="{{!item.isDownLoad}}">
+        <text class='icon-infofill text-red'></text>未下载
+      </view>
+      <view class='text-gray text-sm' wx:else>
+        <text class='icon-roundcheckfill text-green'></text>
+      </view>
     </view>
     <view class='action'>
-      <button class='cu-btn round bg-olive shadow'>
+      <button class='cu-btn round bg-olive shadow' bindtap='downtap' data-name="{{item.name}}" data-url="{{item.url}}" data-index="{{index}}">
         <text class='icon-down'></text> 下载</button>
     </view>
   </view>
+</view>
+
+<view class='cu-load load-modal' wx:if="{{loadModal}}"> 
+    <!-- <view class='icon-emojifill text-orange'></view> -->
+    <view class='gray-text'>正在下载...</view>
 </view>
