--- a/pages/homeworkTeacher/homeworkTeacher.wxml
+++ b/pages/homeworkTeacher/homeworkTeacher.wxml
@@ -1,13 +1,94 @@
 <!--pages/homeworkTeacher/homeworkTeacher.wxml-->
-<view class="cu-card">
-  <view wx:for="{{homeworkList}}" wx:key class="cu-item shadow">
-    <view class="flex padding justify-start bg-green light">
-      <text class="icon-check lg text-green margin-xs"></text>
-      <view class="text-green margin-xs">这里有个戏精铲屎官，主子了解一下？</view>
+<view class="cu-list" wx:if="{{!isInList}}">
+  <view wx:for="{{homeworkList}}" wx:key="{{index}}" class="cu-item margin shadow {{modalName=='move-box-'+ index?'move-cur':''}}" bindtouchstart='ListTouchStart' bindtouchmove='ListTouchMove' bindtouchend='ListTouchEnd' data-target="move-box-{{index}}">
+    <view class="flex justify-start bg-green light" wx:if="{{homeworkList[index].isFinished}}" bindtap='entryCard' id='{{index}}'>
+      <text class="icon-check lg text-green margin-xs padding"></text>
+      <view class="text-green margin-xs padding">{{homeworkList[index].name}}</view>
+      <view class='move'>
+        <view class="text-red text-bold">删除</view>
+      </view>
     </view>
-    <view class="flex padding justify-start bg-red light">
-      <text class="icon-close lg text-red margin-xs"></text>
-      <view class="text-red margin-xs">这里有个戏精铲屎官，主子了解一下？</view>
+    <view class="flex justify-start bg-red light" wx:else bindtap='entryCard' id='{{index}}'>
+      <text class="icon-close lg text-red margin-xs padding"></text>
+      <view class="text-red margin-xs padding">{{homeworkList[index].name}}</view>
+      <view class='move'>
+        <view class="text-red text-bold">删除</view>
+      </view>
     </view>
   </view>
+  <view class='cu-btn bg-mauve lg shadow flex justify-center margin' bindtap='entryCard'>添加作业</view>
 </view>
+
+<view wx:else>
+  <view class="cu-bar bg-blue light">
+    <view class='action' bindtap='backCard'>
+      <text class='icon-close'></text> 关闭
+    </view>
+    <view class='content text-bold' bingtap='backCard'>
+      {{homeworkList[listNum].name}}
+    </view>
+  </view>
+  <scroll-view scroll-y scroll-with-animation='true' scroll-top='{{ topNum }}'>
+    <view>
+      
+      <view class='bg-white padding radius shadow-lg'>
+        <view class='cu-steps'>
+          <view class='cu-item {{index>questionNum?"":"text-blue"}}' wx:for="{{questionList}}" wx:key>
+            <text class='num' data-index='{{index + 1}}'></text>
+          </view>
+        </view>
+      </view>
+
+      <view class="cu-card dynamic no-card">
+        <view class="cu-item shadow padding">
+          <view class='text-content'>
+            {{questionList[questionNum].question}}
+          </view>
+          <view class="padding">
+            <view class="bg-img">此处可以显示一张图片(看后端方便加不加，数据结构留有了)
+            </view>
+          </view>
+        </view>
+      </view>
+      
+      <block wx:if="{{questionList[questionNum].type==0}}">
+        <radio-group class="block margin-top" bindchange="checkboxChange">
+          <view class="cu-form-group" wx:for="{{questionList[questionNum].choseList}}" wx:key="{{index}}">
+            <view class='title'>{{questionList[questionNum].choseList[index].name}}</view>
+            <view wx:if='{{homeworkList[listNum].isFinished}}'>
+              <text class='icon-roundcheckfill text-green' wx:if="{{questionList[questionNum].choseList[index].checked==2}}"></text>
+              <text class='icon-roundcheckfill text-red' wx:elif="{{questionList[questionNum].choseList[index].checked==1}}"></text>
+              <text class='icon-roundclosefill text-gray' wx:else></text>
+            </view>
+            <view wx:else>
+              <radio class='round blue' value="{{index}}"></radio>
+            </view>
+          </view>
+        </radio-group>
+      </block>
+
+      <block wx:else>
+        <checkbox-group class="margin-top" bindchange="checkboxChange">
+          <view class="cu-form-group" wx:for="{{questionList[questionNum].choseList}}" wx:key="{{index}}">
+            <view class='title'>{{questionList[questionNum].choseList[index].name}}</view>
+            <view wx:if='{{homeworkList[listNum].isFinished}}'>
+              <text class='icon-roundcheckfill text-green' wx:if="{{questionList[questionNum].choseList[index].checked==2}}"></text>
+              <text class='icon-roundcheckfill text-red' wx:elif="{{questionList[questionNum].choseList[index].checked==1}}"></text>
+              <text class='icon-roundclosefill text-gray' wx:else></text>
+            </view>
+            <view wx:else>
+              <checkbox class='round blue' value="{{index}}"></checkbox>
+            </view>
+          </view>
+        </checkbox-group>
+      </block>
+
+      <view class="flex padding justify-center align-center">
+        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps' wx:if="{{questionNum == questionList.length - 1}}">完成</button>
+        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps' wx:else>下一题</button>
+      </view>
+    </view>
+  </scroll-view>
+</view>
+
+
