新增教师端删除/添加作业（数据未调通）
数据尚未调通

--- a/pages/homework/homework.wxss
+++ b/pages/homework/homework.wxss
@@ -2,8 +2,7 @@
 @import "../../component/colorUI/colorui.wxss";
 @import "../../component/colorUI/icon.wxss";
 
-.steps-bottom.cu-steps .cu-item .num::before {
-  content: "\e668";
+.steps-bottom.cuteps .cu-item .num::before {
+  content: '\e668';
   font-family: 'iconfont';
 }
-
