--- a/pages/homeworkTeacher/homeworkTeacher.wxml
+++ b/pages/homeworkTeacher/homeworkTeacher.wxml
@@ -1,22 +1,22 @@
-<!--pages/homeworkTeacher/homeworkTeacher.wxml-->
+  <!--pages/homeworkTeacher/homeworkTeacher.wxml-->
 <view class="cu-list" wx:if="{{!isInList}}">
   <view wx:for="{{homeworkList}}" wx:key="{{index}}" class="cu-item margin shadow {{modalName=='move-box-'+ index?'move-cur':''}}" bindtouchstart='ListTouchStart' bindtouchmove='ListTouchMove' bindtouchend='ListTouchEnd' data-target="move-box-{{index}}">
-    <view class="flex justify-start bg-green light" wx:if="{{homeworkList[index].isFinished}}" bindtap='entryCard' id='{{index}}'>
+    <view class="flex justify-start bg-green light" wx:if="{{homeworkList[index].isFinished}}" id='{{index}}'>
       <text class="icon-check lg text-green margin-xs padding"></text>
-      <view class="text-green margin-xs padding">{{homeworkList[index].name}}</view>
+      <view class="text-green margin-xs padding" bindtap='entryCard' id='{{index}}'>{{homeworkList[index].name}}</view>
       <view class='move'>
-        <view class="text-red text-bold">删除</view>
+        <view class="text-red text-bold" bindtap='deleteCard'>删除</view>
       </view>
     </view>
-    <view class="flex justify-start bg-red light" wx:else bindtap='entryCard' id='{{index}}'>
+    <view class="flex justify-start bg-red light" wx:else id='{{index}}'>
       <text class="icon-close lg text-red margin-xs padding"></text>
-      <view class="text-red margin-xs padding">{{homeworkList[index].name}}</view>
+      <view class="text-red margin-xs padding" bindtap='entryCard' id='{{index}}'>{{homeworkList[index].name}}</view>
       <view class='move'>
-        <view class="text-red text-bold">删除</view>
+        <view class="text-red text-bold" bindtap='deleteCard'>删除</view>
       </view>
     </view>
   </view>
-  <view class='cu-btn bg-mauve lg shadow flex justify-center margin' bindtap='entryCard'>添加作业</view>
+  <view class='cu-btn bg-mauve lg shadow flex justify-center margin' bindtap='addCard'>添加作业</view>
 </view>
 
 <view wx:else>
@@ -24,14 +24,15 @@
     <view class='action' bindtap='backCard'>
       <text class='icon-close'></text> 关闭
     </view>
-    <view class='content text-bold' bingtap='backCard'>
+    <view class='content text-bold' bingtap='backCard' wx:if='{{!isAdd}}'>
       {{homeworkList[listNum].name}}
     </view>
+    <input placeholder="请输入作业名" class='content text-bold' name='input' wx:else></input>
   </view>
   <scroll-view scroll-y scroll-with-animation='true' scroll-top='{{ topNum }}'>
     <view>
       
-      <view class='bg-white padding radius shadow-lg'>
+      <view class='bg-white padding radius shadow-lg'wx:if='{{!isAdd}}'>
         <view class='cu-steps'>
           <view class='cu-item {{index>questionNum?"":"text-blue"}}' wx:for="{{questionList}}" wx:key>
             <text class='num' data-index='{{index + 1}}'></text>
@@ -39,30 +40,60 @@
         </view>
       </view>
 
+      <view class='bg-white padding radius shadow-lg' wx:else>
+        <view class='cu-steps'>
+          <view class='cu-item {{index>questionNum?"":"text-blue"}}' wx:for="{{questionNum}}" wx:key>
+            <text class='num' data-index='{{index + 1}}'></text>
+          </view>
+        </view>
+      </view>
+
       <view class="cu-card dynamic no-card">
         <view class="cu-item shadow padding">
-          <view class='text-content'>
+          <view class='text-content' wx:if='{{!isAdd}}'>
             {{questionList[questionNum].question}}
           </view>
+          <input placeholder="请输入题目" class='radius' name='input' wx:else></input>
           <view class="padding">
-            <view class="bg-img">此处可以显示一张图片(看后端方便加不加，数据结构留有了)
+            <view class="bg-img">
             </view>
           </view>
         </view>
       </view>
-      
-      <block wx:if="{{questionList[questionNum].type==0}}">
+
+      <view class="cu-form-group" wx:if='{{isAdd}}'>
+        <view class='title text-bold'>题目类型</view>
+        <view>是否多选题？</view>
+        <switch></switch>
+      </view>
+      <view class="cu-form-group" wx:if='{{isAdd}}'>
+        <view class='title text-bold'>选项设置</view>
+        <button class='cu-btn bg-green shadow' bindtap='addChose'>添加选项</button>
+      </view>
+
+      <block wx:if="{{isAdd}}">
         <radio-group class="block margin-top" bindchange="checkboxChange">
-          <view class="cu-form-group" wx:for="{{questionList[questionNum].choseList}}" wx:key="{{index}}">
-            <view class='title'>{{questionList[questionNum].choseList[index].name}}</view>
-            <view wx:if='{{homeworkList[listNum].isFinished}}'>
-              <text class='icon-roundcheckfill text-green' wx:if="{{questionList[questionNum].choseList[index].checked==2}}"></text>
-              <text class='icon-roundcheckfill text-red' wx:elif="{{questionList[questionNum].choseList[index].checked==1}}"></text>
-              <text class='icon-roundclosefill text-gray' wx:else></text>
-            </view>
-            <view wx:else>
+          <view class="cu-form-group" wx:for="{{choseNum}}" wx:key="{{index}}">
+            <input placeholder="请输入选项文字" class='radius' name='input'></input>
+            <view>
               <radio class='round blue' value="{{index}}"></radio>
             </view>
+          </view>
+        </radio-group>
+      </block>
+      
+      <block wx:if='{{!isAdd}}'>
+      <block wx:if='{{questionList[questionNum].type==0}}'>
+        <radio-group class="block margin-top" bindchange="checkboxChange">
+          <view class="cu-form-group" wx:for="{{questionList[questionNum].choseList}}" wx:key="{{index}}">
+            <block wx:if='{{homeworkList[listNum].isFinished}}'>
+              <view class='title'>{{questionList[questionNum].choseList[index].name}}</view>
+              <view>
+                <text class='icon-roundcheckfill text-green' wx:if="{{questionList[questionNum].choseList[index].checked==2}}"></text>
+                <text class='icon-roundcheckfill text-red' wx:elif="{{questionList[questionNum].choseList[index].checked==1}}"></text>
+                <text class='icon-roundclosefill text-gray' wx:else></text>
+              </view>
+            </block>
           </view>
         </radio-group>
       </block>
@@ -70,22 +101,22 @@
       <block wx:else>
         <checkbox-group class="margin-top" bindchange="checkboxChange">
           <view class="cu-form-group" wx:for="{{questionList[questionNum].choseList}}" wx:key="{{index}}">
-            <view class='title'>{{questionList[questionNum].choseList[index].name}}</view>
-            <view wx:if='{{homeworkList[listNum].isFinished}}'>
-              <text class='icon-roundcheckfill text-green' wx:if="{{questionList[questionNum].choseList[index].checked==2}}"></text>
-              <text class='icon-roundcheckfill text-red' wx:elif="{{questionList[questionNum].choseList[index].checked==1}}"></text>
-              <text class='icon-roundclosefill text-gray' wx:else></text>
-            </view>
-            <view wx:else>
-              <checkbox class='round blue' value="{{index}}"></checkbox>
-            </view>
+            <block wx:if='{{homeworkList[listNum].isFinished}}'>
+              <view class='title'>{{questionList[questionNum].choseList[index].name}}</view>
+              <view>
+                <text class='icon-roundcheckfill text-green' wx:if="{{questionList[questionNum].choseList[index].checked==2}}"></text>
+                <text class='icon-roundcheckfill text-red' wx:elif="{{questionList[questionNum].choseList[index].checked==1}}"></text>
+                <text class='icon-roundclosefill text-gray' wx:else></text>
+              </view>
+            </block>
           </view>
         </checkbox-group>
       </block>
+      </block>
 
       <view class="flex padding justify-center align-center">
-        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps' wx:if="{{questionNum == questionList.length - 1}}">完成</button>
-        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps' wx:else>下一题</button>
+        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionFinished'>完成</button>
+        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps'>下一题</button>
       </view>
     </view>
   </scroll-view>
