--- a/pages/homeworkTeacher/homeworkTeacher.wxml
+++ b/pages/homeworkTeacher/homeworkTeacher.wxml
@@ -34,15 +34,16 @@
       
       <view class='bg-white padding radius shadow-lg'wx:if='{{!isAdd}}'>
         <view class='cu-steps'>
-          <view class='cu-item {{index>questionNum?"":"text-blue"}}' wx:for="{{questionList}}" wx:key>
+          <view class='cu-item {{index>questionIndex?"":"text-blue"}}' wx:for="{{questionList}}" wx:key>
             <text class='num' data-index='{{index + 1}}'></text>
           </view>
         </view>
       </view>
 
       <view class='bg-white padding radius shadow-lg' wx:else>
+        <input placeholder="请输入作业名" class='content text-bold' name='homeworkName' bindinput='inputHomeworkName'></input>
         <view class='cu-steps'>
-          <view class='cu-item {{index>questionNum?"":"text-blue"}}' wx:for="{{questionNum}}" wx:key>
+          <view class='cu-item {{index>questionIndex?"":"text-blue"}}' wx:for="{{questionNum}}" wx:key>
             <text class='num' data-index='{{index + 1}}'></text>
           </view>
         </view>
@@ -51,9 +52,9 @@
       <view class="cu-card dynamic no-card">
         <view class="cu-item shadow padding">
           <view class='text-content' wx:if='{{!isAdd}}'>
-            {{questionList[questionNum].question}}
+            {{questionList[questionIndex].question}}
           </view>
-          <input placeholder="请输入题目" class='radius' name='input' wx:else></input>
+          <input placeholder="请输入题目" class='radius' value='{{questionName}}' name='questionName' bindinput='inputQuestionName' wx:else></input>
           <view class="padding">
             <view class="bg-img">
             </view>
@@ -64,7 +65,7 @@
       <view class="cu-form-group" wx:if='{{isAdd}}'>
         <view class='title text-bold'>题目类型</view>
         <view>是否多选题？</view>
-        <switch></switch>
+        <switch bindchange='questionTypeChange'></switch>
       </view>
       <view class="cu-form-group" wx:if='{{isAdd}}'>
         <view class='title text-bold'>选项设置</view>
@@ -83,40 +84,46 @@
       </block>
       
       <block wx:if='{{!isAdd}}'>
-      <block wx:if='{{questionList[questionNum].type==0}}'>
-        <radio-group class="block margin-top" bindchange="checkboxChange">
-          <view class="cu-form-group" wx:for="{{questionList[questionNum].choseList}}" wx:key="{{index}}">
-            <block wx:if='{{homeworkList[listNum].isFinished}}'>
-              <view class='title'>{{questionList[questionNum].choseList[index].name}}</view>
-              <view>
-                <text class='icon-roundcheckfill text-green' wx:if="{{questionList[questionNum].choseList[index].checked==2}}"></text>
-                <text class='icon-roundcheckfill text-red' wx:elif="{{questionList[questionNum].choseList[index].checked==1}}"></text>
-                <text class='icon-roundclosefill text-gray' wx:else></text>
-              </view>
-            </block>
-          </view>
-        </radio-group>
+        <block wx:if='{{questionList[questionIndex].type==0}}'>
+          <radio-group class="block margin-top" bindchange="checkboxChange">
+            <view class="cu-form-group" wx:for="{{questionList[questionIndex].choseList}}" wx:key="{{index}}">
+              <block wx:if='{{homeworkList[listNum].isFinished}}'>
+                <view class='title'>{{questionList[questionIndex].choseList[index].name}}</view>
+                <view>
+                  <text class='icon-roundcheckfill text-green' wx:if="{{questionList[questionIndex].choseList[index].checked==2}}"></text>
+                  <text class='icon-roundcheckfill text-red' wx:elif="{{questionList[questionIndex].choseList[index].checked==1}}"></text>
+                  <text class='icon-roundclosefill text-gray' wx:else></text>
+                </view>
+              </block>
+            </view>
+          </radio-group>
+        </block>
+
+        <block wx:else>
+          <checkbox-group class="margin-top" bindchange="checkboxChange">
+            <view class="cu-form-group" wx:for="{{questionList[questionIndex].choseList}}" wx:key="{{index}}">
+              <block wx:if='{{homeworkList[listNum].isFinished}}'>
+                <view class='title'>{{questionList[questionIndex].choseList[index].name}}</view>
+                <view>
+                  <text class='icon-roundcheckfill text-green' wx:if="{{questionList[questionIndex].choseList[index].checked==2}}"></text>
+                  <text class='icon-roundcheckfill text-red' wx:elif="{{questionList[questionIndex].choseList[index].checked==1}}"></text>
+                  <text class='icon-roundclosefill text-gray' wx:else></text>
+                </view>
+              </block>
+            </view>
+          </checkbox-group>
+        </block>
       </block>
 
-      <block wx:else>
-        <checkbox-group class="margin-top" bindchange="checkboxChange">
-          <view class="cu-form-group" wx:for="{{questionList[questionNum].choseList}}" wx:key="{{index}}">
-            <block wx:if='{{homeworkList[listNum].isFinished}}'>
-              <view class='title'>{{questionList[questionNum].choseList[index].name}}</view>
-              <view>
-                <text class='icon-roundcheckfill text-green' wx:if="{{questionList[questionNum].choseList[index].checked==2}}"></text>
-                <text class='icon-roundcheckfill text-red' wx:elif="{{questionList[questionNum].choseList[index].checked==1}}"></text>
-                <text class='icon-roundclosefill text-gray' wx:else></text>
-              </view>
-            </block>
-          </view>
-        </checkbox-group>
-      </block>
-      </block>
-
-      <view class="flex padding justify-center align-center">
-        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionFinished'>完成</button>
+      <view class="flex padding justify-center align-center" wx:if='{{isAdd}}'>
+        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionStepsBack'>上一题</button>
         <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps'>下一题</button>
+        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionFinished'>完成</button>
+      </view>
+
+      <view class="flex padding justify-center align-center" wx:else>
+        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps' wx:if="{{questionIndex == questionList.length - 1}}">完成</button>
+        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps' wx:else>下一题</button>
       </view>
     </view>
   </scroll-view>
