bbs的界面好了

--- a/pages/bbs/bbs.wxss
+++ b/pages/bbs/bbs.wxss
@@ -3,7 +3,7 @@
 .round-click{
     height: 120rpx;
     width: 120rpx;
-    background-color: #96ddc8;
+    background-color: #1cbbb4;
     border-radius: 100%;
     position: fixed;
     bottom: 100rpx;
